# midi

./: .gitignore  Example.hs  cabal.sandbox.config  midi.cabal
src/Sound/: MIDI.hs
src/Sound/MIDI/: BitOps.hs  Channel.hs  Config.hs  Events.hs  File.hs  Header.hs  Monad.hs  Note.hs  Track.hs  Types.hs  Values.hs
src/Sound/MIDI/Internal/: Encoding.hs  Ops.hs  Types.hs
src/Sound/MIDI/Internal/Encoding/: Event.hs  Value.hs
src/Sound/MIDI/Values/: Channel.hs  DeltaTime.hs  Event.hs  FileFormat.hs  KeySignature.hs  Note.hs  PPQN.hs  PitchWheel.hs  Pressure.hs  Tempo.hs  Velocity.hs  VoiceEvent.hs  \
src/Sound/Midi/: Example.hs
